Download all parts of DB tickets

They apparently can be split over multiple kwid entries, iterate over all
of those.

BUG: 494696